flux/apps/changedetection.io/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection
  namespace: extra-tools
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
    uptime-kuma.io/enabled: "true"
    uptime-kuma.io/type: "http"
    uptime-kuma.io/url: "http://changedetection.extra-tools.svc:5000"
    uptime-kuma.io/name: "changedetection"
    uptime-kuma.io/interval: "60"
    uptime-kuma.io/retries: "3"
    uptime-kuma.io/notifications: "Monitoring Bot"
    uptime-kuma.io/group: "Utilities"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: changedetection
  template:
    metadata:
      labels:
        app: changedetection
    spec:
      enableServiceLinks: false
      containers:
        - name: changedetection
          image: ghcr.io/dgtlmoon/changedetection.io
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: changedetection-config
              mountPath: /datastore
      volumes:
        - name: changedetection-config
          persistentVolumeClaim:
            claimName: changedetection-config
